# gtn

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  ctc.cpp  functions.cpp  graph.cpp  parallel.cpp  parallel_cuda.cu  time_utils.h
bindings/python/: CMakeLists.txt  README.md  setup.py
bindings/python/benchmarks/: ctc.py  time_utils.py
bindings/python/examples/: blosum.json  pytorch_loss.py  sequence_alignment.py
bindings/python/gtn/: __init__.py  _creations.cpp  _criterions.cpp  _device.cpp  _experimental.cpp  _graph.cpp  _utils.cpp  autograd.cpp  creations.cpp  cuda.cpp  device.cpp  functions.cpp  graph.cpp  parallel.cpp  rand.cpp  utils.cpp
bindings/python/gtn/criterion/: __init__.py  criterion.cpp
bindings/python/test/: test_autograd.py  test_bindings.py  test_creations.py  test_criterions.py  test_cuda.py  test_functions.py  test_utils.py
cmake/: CUDAUtils.cmake
docs/: Doxyfile
docs/source/: criterions.rst  cuda.rst  index.rst  install.rst  pytorch.rst  using_cuda.rst
docs/source/python/: gtn.rst
experimental/: CMakeLists.txt  parallel_compose.cu
gtn/: CMakeLists.txt  autograd.cpp  creations.cpp  creations.h  criterions.cpp  criterions.h  cuda.cpp  cuda.h  device.cpp  device.h  functions.cpp  graph.cpp  graph.h  gtn.h  hd_span.h  parallel.h  rand.cpp  utils.cpp
gtn/cpu/: compose.cpp  compose.h  creations.cpp  creations.h  functions.cpp  functions.h  shortest.cpp  shortest.h
gtn/cuda/: CMakeLists.txt  compose.cu  creations.cu  creations.h  cuda.cu  cuda.cuh  cuda.h  functions.cpp  functions.h  graph.cu  nocuda.cpp  nocuda.h  shortest.cu
gtn/experimental/: CMakeLists.txt  parallel_compose.cpp  parallel_compose.cu
gtn/functions/: compose.cpp  compose.h
gtn/parallel/: cuda_thread_pool.h  parallel_map.h  thread_pool.h
test/: CMakeLists.txt  autograd_test.cpp  common.h  creations_test.cpp  criterion_test.cpp  cuda_creations_test.cpp  cuda_functions_test.cpp  cuda_test.cpp  cuda_utils_test.cpp  device_test.cpp  functions_test.cpp  graph_test.cpp  hd_span_test.cpp  no_cuda_test.cpp  parallel_test.cpp  rand_test.cpp  tests.cpp  utils_test.cpp
test/experimental/: parallel_compose_test.cpp
